--- a/graph-isomorphism.ipynb
+++ b/graph-isomorphism.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c8e2725b",
+   "metadata": {},
+   "source": [
+    "###### Author: Keelan duddy "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "568eb0af",
    "metadata": {},
    "source": [
@@ -62,7 +70,7 @@
     "Graphs can exist in different forms and look different to each other. Two graphs that have the same number of vertices, edges, and same edge connectivity are called isomorphic graphs. Even if they don't look like each other, the below diagram is an example of this: [[4]](https://www.tutorialspoint.com/graph_theory/graph_theory_isomorphism.htm)\n",
     "\n",
     "Isomorphism is a mapping for which an inverse mapping also exists. It's a way to describe equivalence.\n",
-    "Graphs are used in fields like pattern recognition, computer vision and matching. Efficient graph isomorphism algorithms lead to big break throughs in these fields and produces great innovations. [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)\n"
+    "Graphs are used in fields like pattern recognition, computer vision and matching. Efficient graph isomorphism algorithms could lead to big break throughs in these fields and produces great innovations. [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)\n"
    ]
   },
   {
@@ -143,6 +151,25 @@
    "metadata": {},
    "source": [
     "# Graph Isomorphism Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e41d3ad0",
+   "metadata": {},
+   "source": [
+    "The code below checks if two graphs are isomorphic or not using their matrices.\n",
+    "\n",
+    "For two graphs to be Isomorphic, the following must be present:\n",
+    "\n",
+    "\n",
+    "The amount of edges in the 2 graphs must be same.\n",
+    "\n",
+    "The amount of vertices in the 2 graphs must be same.\n",
+    "\n",
+    "The length formed by the vertices with equal degree in one graph, are the same length in the other graph as well.\n",
+    "\n",
+    "The Degree sequence of the 2 graphs must be same. [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)"
    ]
   },
   {
@@ -378,7 +405,7 @@
     "M1 = nx.to_numpy_array(g1).astype(np.uint8)\n",
     "M2 = nx.to_numpy_array(g2).astype(np.uint8)\n",
     "\n",
-    "# call function on matrices\n",
+    "# checks if they are Isomorphic\n",
     "checkIso(M1, M2)"
    ]
   },
@@ -387,7 +414,11 @@
    "id": "26bdb46a",
    "metadata": {},
    "source": [
-    "## Answer: True   "
+    "## Answer: True.  The 2 graphs are Isomorphic <br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
@@ -487,7 +518,7 @@
     "M1 = nx.to_numpy_array(g3).astype(np.uint8)\n",
     "M2 = nx.to_numpy_array(g4).astype(np.uint8)\n",
     "\n",
-    "# call function on matrices\n",
+    "# checks if they are Isomorphic\n",
     "checkIso(M1, M2)"
    ]
   },
@@ -496,13 +527,27 @@
    "id": "62f17317",
    "metadata": {},
    "source": [
-    "## Answer: False"
+    "## Answer: False. The 2 graphs are not Isomorphic\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae8ab68f",
+   "metadata": {},
+   "source": [
+    "# Explanation of how graphs can be represented in data structures. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09846757",
+   "id": "7a8e92e6",
    "metadata": {},
    "outputs": [],
    "source": []
