graph represent data structure done

--- a/heap-sort.ipynb
+++ b/heap-sort.ipynb
@@ -12,6 +12,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1565b22",
+   "metadata": {},
+   "source": [
+    "###### Author: Keelan duddy "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "37002539",
    "metadata": {},
    "source": [
