--- a/graph-isomorphism.ipynb
+++ b/graph-isomorphism.ipynb
@@ -722,7 +722,9 @@
    "id": "76ecefa5",
    "metadata": {},
    "source": [
-    "Adjacency Matrix is a 2D array of size V x V where V is the number of vertices in a graph. Let the 2D array be adj[][], a slot adj[i][j] = 1 indicates that there is an edge from vertex i to vertex j. [[10]](https://www.geeksforgeeks.org/graph-and-its-representations/) Using matrices of graphs and comparing them is what I did in the code to try to find if 2 graph are Isomorphic above.\n",
+    "Adjacency Matrix represents connections between the vetices of a graph. Both the X and Y axis on a adjacency matrix represent the vertices of a graph. Where there is a 0 it represents that there is no direct connection(edge) between the two vertices. Where there is a 1, there is a direct connection. [[10]](https://www.geeksforgeeks.org/graph-and-its-representations/) \n",
+    "\n",
+    "Using matrices of graphs and comparing them is what I did in the code to try to find if 2 graph are Isomorphic above.\n",
     " \n",
     "This is the adjacency matrix for the <b>GreenGraph</b> above: "
    ]
