Did some updates to existing work

--- a/graph-isomorphism.ipynb
+++ b/graph-isomorphism.ipynb
@@ -70,7 +70,7 @@
     "Graphs can exist in different forms and look different to each other. Two graphs that have the same number of vertices, edges, and same edge connectivity are called isomorphic graphs. Even if they don't look like each other, the below diagram is an example of this: [[4]](https://www.tutorialspoint.com/graph_theory/graph_theory_isomorphism.htm)\n",
     "\n",
     "Isomorphism is a mapping for which an inverse mapping also exists. It's a way to describe equivalence.\n",
-    "Graphs are used in fields like pattern recognition, computer vision and matching. Efficient graph isomorphism algorithms could lead to big break throughs in these fields and produces great innovations. [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)\n"
+    "Graphs are used in fields like pattern recognition, computer vision and matching. Efficient graph isomorphism algorithms could lead to big break throughs in these fields and produce great innovations. [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)\n"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "id": "e3ee0a2e",
    "metadata": {},
    "source": [
-    "So when it comes to what Graph-Isomorphism Problem means, it means the computational problem of determining whether two finite graphs are isomorphic. That what the problem is. It may seem that this problem isn't that difficult. However it is and i'll go into more detail on why, below. [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)"
+    "So when it comes to what Graph-Isomorphism Problem means, it means the computational problem of determining whether two finite graphs are isomorphic. Thats what the problem is. It may seem that this problem isn't that difficult. However it is and i'll go into more detail on why, below. [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)"
    ]
   },
   {
@@ -121,7 +121,7 @@
     "\n",
     "One way of asking it is, \"Can every solved problem whose answer can be checked quickly by a computer, also be quickly solved by a computer?\". \n",
     "\n",
-    "Math problems are referred to as P or NP, whether they are solvable in finite polynomial time. P problems are have their solution time bound to a polynomial and so are relatively fast for computers to solve, and so are considered \"easy\".\n",
+    "Math problems are referred to as P or NP, whether they are solvable in finite polynomial time. P problems have their solution time bound to a polynomial and so are relatively fast for computers to solve, and so are considered \"easy\".\n",
     "\n",
     "NP problems are fast (and so \"easy\") for a computer to check, but are not necessarily easy to solve. [[7]](https://simple.wikipedia.org/wiki/P_versus_NP)\n",
     "\n",
@@ -297,7 +297,10 @@
     "                return True\n",
     "            \n",
     "    # else returns false\n",
-    "    return False  \n"
+    "    return False  \n",
+    "\n",
+    "\n",
+    "# credit toni canada"
    ]
   },
   {
@@ -313,7 +316,9 @@
    "id": "c989e0cd",
    "metadata": {},
    "source": [
-    "The algorithm above is not very efficient and is brute force code for isomorphism. This algorithm checks if graphs are isomorphic or not by taking 2 matrices and will return either a true or false. [[9]](https://tonicanada.medium.com/brute-force-code-for-isomorphisms-1241ef180570)"
+    "\n",
+    "\n",
+    "The algorithm above is not very efficient and is brute force code for isomorphism. This algorithm does some checks before it compares if graphs are isomorphic or not by taking 2 matrices and will return either a true or false. [[9]](https://tonicanada.medium.com/brute-force-code-for-isomorphisms-1241ef180570) [[14]](https://gist.github.com/tonicanada/5f689540d30e51a9837d660b801ef9cb)"
    ]
   },
   {
@@ -549,7 +554,7 @@
    "id": "0beae2e4",
    "metadata": {},
    "source": [
-    "We can represent graphs in these 3 data structures\n",
+    "We can represent graphs in these 2 data structures\n",
     "\n",
     "- Adjacency list\n",
     "- Adjancency matrix\n",
@@ -586,9 +591,9 @@
    "id": "7a9e8199",
    "metadata": {},
    "source": [
-    "Adjacency List is an array.  The size of the array is equal to the number of vertices. Let the array be an array[]. An entry array[i] represents the list of vertices adjacent to the ith vertex. \n",
+    "An adjacency list represents a graph as an array of linked lists. The index of the array represents a vertex and each element in its linked list represents the other vertices that form an edge with the vertex. [[13]](https://www.programiz.com/dsa/graph-adjacency-list#:~:text=An%20adjacency%20list%20represents%20a,an%20edge%20with%20the%20vertex.)\n",
     "\n",
-    "This representation can also be used to represent a weighted graph. The weights of edges can be represented as lists of pairs. The Following is the adjacency list representation of the above <b>GreenGraph.</b> [[10]](https://www.geeksforgeeks.org/graph-and-its-representations/)\n",
+    "The Following is the adjacency list representation of the above <b>GreenGraph.</b> [[10]](https://www.geeksforgeeks.org/graph-and-its-representations/)\n",
     " "
    ]
   },
@@ -782,7 +787,7 @@
    "id": "353f77fb",
    "metadata": {},
    "source": [
-    "Graph name: BlueGraph\n",
+    "Graph name: <b>BlueGraph<b>\n",
     "\n",
     "Import numpy package which has a function to display matrices [[11]](https://numpy.org/doc/)"
    ]
@@ -868,7 +873,11 @@
     "\n",
     "numpy doc https://numpy.org/doc/ [11]\n",
     "\n",
-    "sets geeksforgeeks https://www.geeksforgeeks.org/graph-representations-using-set-hash/ [12]"
+    "sets geeksforgeeks https://www.geeksforgeeks.org/graph-representations-using-set-hash/ [12]\n",
+    "\n",
+    "programiz adjacency list https://www.programiz.com/dsa/graph-adjacency-list#:~:text=An%20adjacency%20list%20represents%20a,an%20edge%20with%20the%20vertex. [13]\n",
+    "\n",
+    "Brute force graph Isomorphic code https://gist.github.com/tonicanada/5f689540d30e51a9837d660b801ef9cb [14]"
    ]
   },
   {
