--- a/heap-sort.ipynb
+++ b/heap-sort.ipynb
@@ -261,6 +261,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3343de03",
+   "metadata": {},
+   "source": [
+    "###### Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33eacd9e",
+   "metadata": {},
+   "source": [
+    "So in summary what heap-sort divides its input into a sorted and an unsorted region, and it iteratively shrinks the unsorted region by extracting the largest element from it and inserting it into the sorted region. [[3]](https://en.wikipedia.org/wiki/Heapsort)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c4d238c",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6a63ee6d",
    "metadata": {},
    "source": [
@@ -843,7 +871,7 @@
    "id": "2661f530",
    "metadata": {},
    "source": [
-    "The above shows what the graph looks like when it's been heapsorted. Using graphs I was able to visualise and explain step by step the process of the heap-sort algorithm. "
+    "The above shows what the graph looks like when it's been fully heapsorted. Using graphs I was able to visualise and explain step by step the process of the heap-sort algorithm. "
    ]
   },
   {
