minor rework on topics and update with readme

--- a/graph-isomorphism.ipynb
+++ b/graph-isomorphism.ipynb
@@ -109,7 +109,13 @@
    "source": [
     "In computational complexity theory, a <b>complexity class </b> is a set of computational problems of related resource-based complexity. The two most commonly analyzed resources are time and memory. Two of these complexity classes are called P(polynomial time) and NP(nondeterministic polynomial time). The Graph Isomorphism is considered an NP problem.                 [[6]](https://en.wikipedia.org/wiki/Complexity_class)\n",
     "\n",
-    "The Graph Isomorphism problem is not known to be solvable in polynomial time nor to be NP-complete, and therefore may be in the computational complexity class NP-intermediate. [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)"
+    "The Graph Isomorphism problem is not known to be solvable in polynomial time nor to be NP-complete, and therefore may be in the computational complexity class NP-intermediate. [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)\n",
+    "\n",
+    "An NP-intermediate problem is a decision problem that:\n",
+    "\n",
+    "- is in NP (that is, \"yes\" answers can be verified in polynomial time),\n",
+    "- is not in P (that is, there is no polynomial-time algorithm for solving the problem), and\n",
+    "- is not NP-complete. [[15]](https://stackoverflow.com/questions/40773886/what-are-np-intermediate-problems/40773945#40773945)"
    ]
   },
   {
@@ -117,11 +123,11 @@
    "id": "40a26583",
    "metadata": {},
    "source": [
-    "P versus NP is one of the biggest interests to people working with computers and in mathematics. \n",
+    "<b>P versus NP </b> is one of the biggest interests to people working with computers and in mathematics. \n",
     "\n",
-    "One way of asking it is, \"Can every solved problem whose answer can be checked quickly by a computer, also be quickly solved by a computer?\". \n",
+    "One way of asking it is, \"Can every solved problem whose answer can be checked quickly by a computer, also be quickly solved by a computer?\". [[7]](https://simple.wikipedia.org/wiki/P_versus_NP)\n",
     "\n",
-    "Math problems are referred to as P or NP, whether they are solvable in finite polynomial time. P problems have their solution time bound to a polynomial and so are relatively fast for computers to solve, and so are considered \"easy\".\n",
+    "Math problems are referred to as P or NP, whether they are solvable in finite polynomial time. P problems have their solution time bound to a polynomial and so are relatively fast for computers to solve, and so are considered \"easy\". [[7]](https://simple.wikipedia.org/wiki/P_versus_NP)\n",
     "\n",
     "NP problems are fast (and so \"easy\") for a computer to check, but are not necessarily easy to solve. [[7]](https://simple.wikipedia.org/wiki/P_versus_NP)\n",
     "\n",
@@ -163,13 +169,13 @@
     "For two graphs to be Isomorphic, the following must be present:\n",
     "\n",
     "\n",
-    "The amount of edges in the 2 graphs must be same.\n",
+    "- The amount of edges in the 2 graphs must be same.  [[16]](https://www.gatevidyalay.com/graph-isomorphism/#:~:text=Graph%20Isomorphism%20Conditions%2D&text=Number%20of%20vertices%20in%20both,the%20graphs%20must%20be%20same.)\n",
     "\n",
-    "The amount of vertices in the 2 graphs must be same.\n",
+    "- The amount of vertices in the 2 graphs must be same.  [[16]](https://www.gatevidyalay.com/graph-isomorphism/#:~:text=Graph%20Isomorphism%20Conditions%2D&text=Number%20of%20vertices%20in%20both,the%20graphs%20must%20be%20same.)\n",
     "\n",
-    "The length formed by the vertices with equal degree in one graph, are the same length in the other graph as well.\n",
+    "- The length formed by the vertices with equal degree in one graph, are the same length in the other graph as well.  [[16]](https://www.gatevidyalay.com/graph-isomorphism/#:~:text=Graph%20Isomorphism%20Conditions%2D&text=Number%20of%20vertices%20in%20both,the%20graphs%20must%20be%20same.)\n",
     "\n",
-    "The Degree sequence of the 2 graphs must be same. [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)"
+    "- The Degree sequence of the 2 graphs must be same.  [[16]](https://www.gatevidyalay.com/graph-isomorphism/#:~:text=Graph%20Isomorphism%20Conditions%2D&text=Number%20of%20vertices%20in%20both,the%20graphs%20must%20be%20same.)   [[5]](https://en.wikipedia.org/wiki/Graph_isomorphism_problem)"
    ]
   },
   {
@@ -877,7 +883,11 @@
     "\n",
     "programiz adjacency list https://www.programiz.com/dsa/graph-adjacency-list#:~:text=An%20adjacency%20list%20represents%20a,an%20edge%20with%20the%20vertex. [13]\n",
     "\n",
-    "Brute force graph Isomorphic code https://gist.github.com/tonicanada/5f689540d30e51a9837d660b801ef9cb [14]"
+    "Brute force graph Isomorphic code https://gist.github.com/tonicanada/5f689540d30e51a9837d660b801ef9cb [14]\n",
+    "\n",
+    "stack overflow: What are NP-Intermediate problems? https://stackoverflow.com/questions/40773886/what-are-np-intermediate-problems/40773945#40773945 [15]\n",
+    "\n",
+    "GateVidyalay: Graph Isomorphism Conditions https://www.gatevidyalay.com/graph-isomorphism/#:~:text=Graph%20Isomorphism%20Conditions%2D&text=Number%20of%20vertices%20in%20both,the%20graphs%20must%20be%20same. [16]"
    ]
   },
   {
