--- a/heap-sort.ipynb
+++ b/heap-sort.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "So putting these two together, algorithms determine the way data is organised from these data structures.\n",
     "\n",
-    "Heap sort is one of many sorting algorithms, it is one of most known due to it's performance being that it's best and worst case scenario can be both [O(n\\log n)](https://en.wikipedia.org/wiki/Heapsort)[3].\n"
+    "Heap sort is one of many sorting algorithms, it is one of most known due to it's performance being that it's best and worst case scenario can be both [O(n log n)](https://en.wikipedia.org/wiki/Heapsort)[3].\n"
    ]
   },
   {
@@ -512,11 +512,21 @@
     "\n",
     "### How HeapSort is O(n log n):\n",
     "\n",
-    "To start off with, the height of complete binary tree proves that the height of a heap is log N.\n",
+    "To start off with, the height of complete binary tree proves that the height of a heap is log N. [[19]](https://medium.com/@angeloacebedo/run-time-analysis-heap-sort-8b81d6403508)\n",
     "\n",
-    "In heap sort, you build a heap and then extract the root element one by one, after every extraction you make the last element as root and then run the heapify() procedure. The heapify procedure takes O(log n), time.\n",
+    "In heap sort, you build a max heap and then extract the root element one by one, after every extraction you make the last element as root and then run the heapify() procedure. The heapify procedure takes O(log n), time. [[19]](https://medium.com/@angeloacebedo/run-time-analysis-heap-sort-8b81d6403508)\n",
     "\n",
-    "Also, you do this heapify procedure n times(one time for each element), so time complexity becomes O(n log n). [[13]](https://www.quora.com/How-does-Heapsort-take-O-nlogn-time)\n",
+    "Also, you do this heapify procedure n times(one time for each element), so <b>Time complexity</b> becomes O(n log n).[[19]](https://medium.com/@angeloacebedo/run-time-analysis-heap-sort-8b81d6403508) [[13]](https://www.quora.com/How-does-Heapsort-take-O-nlogn-time)\n",
+    "\n",
+    "The <b> Space Complexity </b>:\n",
+    "\n",
+    "Heapsort is an in-place designed sorting algorithm, the space requirement is constant and therefore, O(1). \n",
+    "This is because, in case of any input:\n",
+    "\n",
+    "- We arrange all the list items in place using a heap structure\n",
+    "- We put the removed item at the end of the same list after removing the max node from the max-heap.\n",
+    "\n",
+    "This means we don't use any extra space when implementing the heapsort algorithm. This gives the algorithm a <b>Space Complexity </b> of O(1). [[18]](https://iq.opengenus.org/time-complexity-of-heap-sort/)\n",
     "\n"
    ]
   },
@@ -579,9 +589,9 @@
    "id": "3122fec0",
    "metadata": {},
    "source": [
-    "What the above diagram shows is that Heapsort is slower than Quicksort by factor 3.6 and slower than Merge Sort by factor 2.4 for randomly distributed input data. For sorted data, heapsort is eight to nine times slower than quicksort and two times slower than Merge Sort.\n",
+    "What the above diagram shows is that Heapsort is slower than Quicksort by factor 3.6 and slower than Merge Sort by factor 2.4 for randomly distributed input data. For sorted data, heapsort is eight to nine times slower than quicksort and two times slower than Merge Sort. [[16]](https://www.happycoders.eu/algorithms/heapsort/)\n",
     "\n",
-    "<b>Heapsort vs quicksort: </b> quicksort is a lot faster than heapsort but due to quicksort having its worst-case be O(n²), heapsort may get used over it at times.\n",
+    "<b>Heapsort vs quicksort: </b> quicksort is a lot faster than heapsort but due to quicksort having its worst-case be O(n²), heapsort may get used over it at times. [[16]](https://www.happycoders.eu/algorithms/heapsort/)\n",
     "\n",
     "<b>Heapsort vs merge sort:</b> Merge sort is faster and more stable than heapsort. However, heapsort has the advantage of not requiring additional memory unlike merge sort which requires additional memory in order of O(n). [[16]](https://www.happycoders.eu/algorithms/heapsort/)\n",
     "\n",
@@ -624,7 +634,7 @@
    "id": "98f96ac2",
    "metadata": {},
    "source": [
-    "The above diagram shows how a binary tree graph that can represent an array of integers. To understand how the array is placed on the graph you must read the graph from left to right going down each row. <br>\n",
+    "The above diagram shows how a binary tree graph which can represent an array of integers. To understand how the array is placed on the graph you must read the graph from left to right going down each row. <br>\n",
     "\n",
     "### With the folowing examples below shows you how a graph can easily visualise what is happening in the Heap-Sort algorithm:"
    ]
@@ -922,7 +932,10 @@
     "heapsort complexity https://www.happycoders.eu/algorithms/heapsort/ [16] <br>\n",
     "\n",
     "Sciencing https://sciencing.com/the-advantages-of-heap-sort-12749895.html [17] <br>\n",
-    "\n"
+    "\n",
+    "opengenus Time & Space Complexity of Heap Sort https://iq.opengenus.org/time-complexity-of-heap-sort/ [18] <br>\n",
+    "\n",
+    "run time analysis of heapsort https://medium.com/@angeloacebedo/run-time-analysis-heap-sort-8b81d6403508  [19]<br>\n"
    ]
   }
  ],
