refined heapsort code and spellchecks on work

--- a/heap-sort.ipynb
+++ b/heap-sort.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Heap Sort"
+    "# Heap Sort Algorithm"
    ]
   },
   {
@@ -20,10 +20,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3a293ad",
+   "metadata": {},
+   "source": [
+    "#### Imports needed:\n",
+    "\n",
+    "\n",
+    "import matplotlib.pyplot as plt \n",
+    "\n",
+    "import networkx as nx\n",
+    "\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "37002539",
    "metadata": {},
    "source": [
-    "## Introduction\n"
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "# Introduction\n"
    ]
   },
   {
@@ -351,7 +370,7 @@
    "source": [
     "def heapify(array, l, r): # array, length, root\n",
     "         \n",
-    "    # Find biggest element among root and children\n",
+    "    # Find biggest value among root and children\n",
     "    biggest = r\n",
     "\n",
     "    # Finding the children of the root.\n",
@@ -359,17 +378,17 @@
     "    \n",
     "    right = 2 * r + 2\n",
     "\n",
-    "    # check if the left child of the root is there and if it is greater value or not \n",
+    "    # check if the left child of the root is there and if it is greater value than the root\n",
     "    if left < l and array[r] < array[left]:\n",
     "        \n",
     "        biggest = left\n",
     "\n",
-    "    # check if the right child of the root is there and if it is greater value or not\n",
+    "    # check if the right child of the root is there and if it is greater value than the root\n",
     "    if right < l and array[biggest] < array[right]:\n",
     "        \n",
     "        biggest = right\n",
     "\n",
-    "    # If the root is not the biggest value then it gets swapped with largest and kept repeating the function\n",
+    "    # we must check If the root is not the largest, swap and proceed to heapify\n",
     "    if (biggest != r):\n",
     "        \n",
     "        array[r], array[biggest] = array[biggest], array[r]\n",
@@ -396,12 +415,12 @@
     "    s = len(array) \n",
     "  \n",
     "    \n",
-    "    # goes through the values and heapifys them. The resulting list of elements will be sorted\n",
-    "    for i in range(s, -1, -1): \n",
+    "    # goes through the values and heapifys them. The resulting list of elements will be a max heap\n",
+    "    for i in range(s//2, -1, -1):  # s//2 floors the value\n",
     "        \n",
     "        heapify(array, s, i) \n",
     "  \n",
-    "    # One by one sorting the values\n",
+    "    # One by one extract elements \n",
     "    for i in range(s-1, 0, -1): \n",
     "        \n",
     "        #swaps\n",
