--- a/graph-isomorphism.ipynb
+++ b/graph-isomorphism.ipynb
@@ -18,6 +18,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4c7d7bbf",
+   "metadata": {},
+   "source": [
+    "###### Imports needed:\n",
+    "import networkx as nx\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "import itertools\n",
+    "\n",
+    "<br>\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "568eb0af",
    "metadata": {},
    "source": [
